# Command-Line-Desktop

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  config.yaml
.github/workflows/: build.yml
build-x11/: CMakeCache.txt
src/: main.cpp
src/apps/: AppDetector.cpp  AppDetector.h  AppRunner.cpp  AppRunner.h  ConfigEditor.cpp  ConfigEditor.h  FileManager.cpp  FileManager.h
src/backend/: Renderer.h  TerminalRenderer.cpp  X11Renderer.cpp  X11Renderer.h
src/config/: ConfigLoader.cpp  ConfigLoader.h
src/core/: ColorUtils.h  Component.h  EventLoop.h
src/ui/: CanvasHelpers.h  Compositor.cpp  Desktop.cpp  Desktop.h  Dock.cpp  Dock.h  Layer.h  Panel.cpp  Panel.h  StartMenu.cpp  StartMenu.h  WindowFrame.cpp  WindowFrame.h  WindowManager.cpp  WindowManager.h  WorkspaceManager.cpp  WorkspaceManager.h
